Fixed footer links and about me excerpt spacing

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@
 **/
 
 html {
-    @apply scroll-smooth
+    @apply scroll-smooth bg-gray-950
 }
 
 .spacer {
